--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,27 +8,24 @@ dependencies = [
     # autosemver uses some deprecated setuptools APIs
     # https://github.com/david-caro/python-autosemver/issues/56
     "setuptools < 81",
+    "pre-commit",
+
 ]
-name = "mypackage"
+name = "geospatial_utils"
 dynamic = ["version"]
-authors = [{ name = "John Doe", email = "johdoe@ceh.ac.uk" }]
+authors = [{ name = "Samantha Hewkin", email = "samhew@ceh.ac.uk" }]
 description = "A minimal setup for a template package."
 
-[dependency-groups]
-test = ["pytest", "pytest-cov"]
+[project.optional-dependencies]
+dev = ["ruff", "pytest", "pytest-cov"]
 docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme"]
-lint = ["ruff"]
-dev = [
-  { include-group = "test"},
-  { include-group = "docs"},
-  { include-group = "lint"},
-]
+
 
 [tool.setuptools.dynamic]
-version = { attr = "mypackage.__version__" }
+version = { attr = "geospatial_utils.__version__" }
 
 [tool.pytest.ini_options]
-addopts = "--cov=mypackage"
+addopts = "--cov=geospatial_utils"
 markers = [
     "slow: Marks slow tests",
 ]
@@ -39,7 +36,7 @@ filterwarnings = [
 ]
 
 [tool.coverage.run]
-omit = ["*__init__.py", "src/mypackage/__main__.py"]
+omit = ["*__init__.py", "src/geospatial_utils/__main__.py"]
 
 [tool.ruff]
 line-length = 120
